force-app/main/default/objects/PKBTranslation__c/PKBTranslation__c.object-meta.xml
<CustomObject>
    <description>Allows you to support translated articles in your public knowledge base. Included with PKB Site Setup object.</description>
    <label>Site Translation</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Translation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>