force-app/main/default/objects/PKBTranslation__c/fields/Category2Description__c.field-meta.xml
<CustomField>
    <fullName>Category2Description__c</fullName>
    <inlineHelpText>The description of the second category that appears on the Home page of the public knowledge base.</inlineHelpText>
    <label>Category 2 Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>