force-app/main/default/objects/PKBTranslation__c/fields/Category3Description__c.field-meta.xml
<CustomField>
    <fullName>Category3Description__c</fullName>
    <inlineHelpText>The description of the third category that appears on the Home page of the public knowledge base.</inlineHelpText>
    <label>Category 3 Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>