force-app/main/default/objects/PKBTranslation__c/fields/Category5Description__c.field-meta.xml
<CustomField>
    <fullName>Category5Description__c</fullName>
    <inlineHelpText>The description of the fifth category that appears on the Home page of the public knowledge base.</inlineHelpText>
    <label>Category 5 Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>