force-app/main/default/objects/PKBTranslation__c/fields/HomeAdText__c.field-meta.xml
<CustomField>
    <fullName>HomeAdText__c</fullName>
    <inlineHelpText>The text that appears under the advertising title on the home page of the public knowledge base. This field is limited to 32,000 characters.</inlineHelpText>
    <label>Home Advertising Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>