force-app/main/default/objects/PKBTranslation__c/fields/HomeAdTitle__c.field-meta.xml
<CustomField>
    <fullName>HomeAdTitle__c</fullName>
    <inlineHelpText>The advertising title that appears on the home page of the public knowledge base. This field is limited to 255 characters.</inlineHelpText>
    <label>Home Advertising Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>