force-app/main/default/objects/PKBTranslation__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <inlineHelpText>The target language as identified by its IETF code. For example, if you&apos;re translating from French to American English, enter en_US here.</inlineHelpText>
    <label>Language Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
            </value>
            <value>
                <fullName>da</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>fi</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>ja</fullName>
            </value>
            <value>
                <fullName>ko</fullName>
            </value>
            <value>
                <fullName>nl_NL</fullName>
            </value>
            <value>
                <fullName>pt_BR</fullName>
            </value>
            <value>
                <fullName>ru</fullName>
            </value>
            <value>
                <fullName>sv</fullName>
            </value>
            <value>
                <fullName>th</fullName>
            </value>
            <value>
                <fullName>zh_CN</fullName>
            </value>
            <value>
                <fullName>zh_TW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>