force-app/main/default/objects/PKBTranslation__c/fields/PKB_Site_Setup__c.field-meta.xml
<CustomField>
    <fullName>PKB_Site_Setup__c</fullName>
    <description>Associated main PKB object</description>
    <label>PKB Site Setup</label>
    <referenceTo>PKBSiteSetup__c</referenceTo>
    <relationshipLabel>Site Translations</relationshipLabel>
    <relationshipName>PKB_translations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>